make my profile prettier

--- a/index.html
+++ b/index.html
@@ -10,30 +10,37 @@
 <body>
   <div class="container">
     <div class="card">
-    <h1>Hello I'm is Maarten</h1>
-    <img class="img-circle" src="images/maarten_esser.jpeg" alt="Maarten Esser" width="100px" height="100px">
+      <h1>Hello I'm is Maarten</h1>
+      <img class="img-circle" src="images/maarten_esser.jpeg" alt="Maarten Esser" width="100px" height="100px">
 
-    <p>I love coding and talking about tech</p>
+      <p>I love coding and talking about tech</p>
 
-    <a class="btn-purple" href="https://github.com/maartenesser">Link to my github</a>
+      <a class="btn-purple" href="https://github.com/maartenesser">Link to my github</a>
+    </div>
+
+    <div class="card">
+      <h2>Follow me</h2>
+      <ul class="list-inline">
+        <li>
+          <a href="https://www.linkedin.com/in/maarten-esser-b491b04b/" target="blank"><i class="fab fa-linkedin icon-size"></i></a>
+        </li>
+        <li>
+          <a href="https://github.com/maartenesser"><i class="fab fa-github-square icon-size" target="blank"></i></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/maarten.esser">
+            <i class="fab fa-facebook icon-size" target="blank"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 
-  <div class="card">
-    <h2>Follow me</h2>
-    <ul class="list-inline">
-      <li>
-        <a href="https://www.linkedin.com/in/maarten-esser-b491b04b/" target="blank"><i class="fab fa-linkedin icon-size"></i></a>
-      </li>
-      <li>
-        <a href="https://github.com/maartenesser"><i class="fab fa-github-square icon-size" target="blank"></i></a>
-      </li>
-      <li>
-        <a href="https://www.facebook.com/maarten.esser">
-          <i class="fab fa-facebook icon-size" target="blank"></i>
-        </a>
-      </li>
-    </ul>
+  <div class="iframe-container">
+  <iframe src="./js13k16-gh-pages/min">
+  </iframe>
   </div>
-</div>
+
+
 </body>
 </html>
