make my profile prettier

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="iframe-container">
-  <iframe src="./js13k16-gh-pages/min">
+  <iframe src="https://maartenesser.github.io/profile/js13k16-gh-pages/min">
   </iframe>
   </div>
 
