--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <h1>Hello I'm is Maarten</h1>
+      <h1>Hello I'm Maarten</h1>
       <img class="img-circle" src="images/maarten_esser.jpeg" alt="Maarten Esser" width="100px" height="100px">
 
       <p>I love coding and talking about tech</p>
